Add additional topologies, configurations, and interactive visualization features
- Introduced new network topologies: grid, linear, and ring.
- Added configuration presets for high variability, leak studies, and weekend peaks.
- Enhanced README with usage examples for new features.
- Implemented interactive network visualization in Plotly.
- Updated generator and dashboard scripts to support new functionalities.

--- a/project/config.yml
+++ b/project/config.yml
@@ -12,7 +12,7 @@ noise:
     sigma_rel: 0.1
 profiles:
   num_harmonics: 2
-  # day‑of‑week multipliers. Keys are strings for YAML compatibility.
+  # day-of-week multipliers. Keys are strings for YAML compatibility.
   dow_factors:
     '0': 1.0  # Monday
     '1': 1.0  # Tuesday
