Add interactive network flow viewer with Plotly integration
- Implemented a new interactive viewer for network flows using Plotly.
- Added functionality to visualize network data with time sliders.
- Included error handling for missing data and layout computation.
- Enhanced user experience with hover templates and customizable edge properties.
- Updated documentation to reflect new features and requirements.

--- a/project/data/sample_events_anomalies.yaml
+++ b/project/data/sample_events_anomalies.yaml
@@ -1,24 +1,240 @@
-- id: ev_offset_1
-  type: offset
-  ts_start: 2025-01-01 01:15:00
-  duration: 20
-  target_kind: meter
-  target_id: meter_c1
-  magnitude: 2.0
-  mode: add
-- id: ev_leak_1
+- id: ev_leak_01
   type: leak
-  ts_start: 2025-01-01 03:00:00
+  ts_start: 2025-01-01 00:20:00
+  duration: 25
+  target_kind: edge
+  target_id: e_root_north
+  magnitude: 5.0
+  mode: const
+- id: ev_offset_01
+  type: offset
+  ts_start: 2025-01-01 00:30:00
+  duration: 40
+  target_kind: meter
+  target_id: meter_src_north
+  magnitude: 1.6
+  mode: add
+- id: ev_leak_02
+  type: leak
+  ts_start: 2025-01-01 01:05:00
+  duration: 35
+  target_kind: edge
+  target_id: e_root_south
+  magnitude: 6.3
+  mode: const
+- id: ev_offset_02
+  type: offset
+  ts_start: 2025-01-01 01:40:00
+  duration: 30
+  target_kind: meter
+  target_id: meter_src_south
+  magnitude: -1.1
+  mode: add
+- id: ev_offset_03
+  type: offset
+  ts_start: 2025-01-01 02:00:00
+  duration: 75
+  target_kind: meter
+  target_id: meter_src_east
+  magnitude: 0.12
+  mode: mul
+- id: ev_leak_03
+  type: leak
+  ts_start: 2025-01-01 02:15:00
+  duration: 20
+  target_kind: edge
+  target_id: e_root_east
+  magnitude: 3.8
+  mode: const
+- id: ev_offset_04
+  type: offset
+  ts_start: 2025-01-01 02:55:00
+  duration: 80
+  target_kind: meter
+  target_id: meter_src_west
+  magnitude: -0.08
+  mode: mul
+- id: ev_leak_04
+  type: leak
+  ts_start: 2025-01-01 03:50:00
+  duration: 45
+  target_kind: edge
+  target_id: e_root_west
+  magnitude: 4.6
+  mode: const
+- id: ev_offset_05
+  type: offset
+  ts_start: 2025-01-01 04:10:00
+  duration: 50
+  target_kind: meter
+  target_id: meter_c01
+  magnitude: 2.3
+  mode: add
+- id: ev_leak_05
+  type: leak
+  ts_start: 2025-01-01 04:25:00
   duration: 30
   target_kind: edge
-  target_id: e2
-  magnitude: 5.5
+  target_id: e_branch_n1_c01
+  magnitude: 2.7
   mode: const
-- id: ev_offset_2
+- id: ev_offset_06
   type: offset
-  ts_start: 2025-01-01 06:45:00
-  duration: 15
+  ts_start: 2025-01-01 04:55:00
+  duration: 55
   target_kind: meter
-  target_id: meter_c2
+  target_id: meter_c02
   magnitude: -1.5
   mode: add
+- id: ev_offset_07
+  type: offset
+  ts_start: 2025-01-01 05:30:00
+  duration: 45
+  target_kind: meter
+  target_id: meter_c03
+  magnitude: 1.4
+  mode: drift
+- id: ev_leak_06
+  type: leak
+  ts_start: 2025-01-01 05:40:00
+  duration: 25
+  target_kind: edge
+  target_id: e_branch_n2_c03
+  magnitude: 2.9
+  mode: const
+- id: ev_offset_08
+  type: offset
+  ts_start: 2025-01-01 06:20:00
+  duration: PT50M
+  target_kind: meter
+  target_id: meter_c04
+  magnitude: -1.9
+  mode: add
+- id: ev_leak_07
+  type: leak
+  ts_start: 2025-01-01 06:55:00
+  duration: 35
+  target_kind: edge
+  target_id: e_branch_s1_c05
+  magnitude: 3.4
+  mode: const
+- id: ev_offset_09
+  type: offset
+  ts_start: 2025-01-01 07:05:00
+  duration: 65
+  target_kind: meter
+  target_id: meter_c05
+  magnitude: 0.15
+  mode: mul
+- id: ev_offset_10
+  type: offset
+  ts_start: 2025-01-01 08:15:00
+  duration: 35
+  target_kind: meter
+  target_id: meter_c06
+  magnitude: -0.7
+  mode: add
+- id: ev_leak_08
+  type: leak
+  ts_start: 2025-01-01 08:10:00
+  duration: 40
+  target_kind: edge
+  target_id: e_branch_s2_c08
+  magnitude: 4.8
+  mode: const
+- id: ev_offset_11
+  type: offset
+  ts_start: 2025-01-01 09:25:00
+  duration: 45
+  target_kind: meter
+  target_id: meter_c07
+  magnitude: 1.9
+  mode: add
+- id: ev_leak_09
+  type: leak
+  ts_start: 2025-01-01 09:35:00
+  duration: 30
+  target_kind: edge
+  target_id: e_branch_e1_c09
+  magnitude: 3.6
+  mode: const
+- id: ev_offset_12
+  type: offset
+  ts_start: 2025-01-01 10:30:00
+  duration: 60
+  target_kind: meter
+  target_id: meter_c08
+  magnitude: -0.1
+  mode: mul
+- id: ev_leak_10
+  type: leak
+  ts_start: 2025-01-01 11:15:00
+  duration: 50
+  target_kind: edge
+  target_id: e_branch_e2_c11
+  magnitude: 5.2
+  mode: const
+- id: ev_offset_13
+  type: offset
+  ts_start: 2025-01-01 11:50:00
+  duration: 55
+  target_kind: meter
+  target_id: meter_c09
+  magnitude: 1.0
+  mode: drift
+- id: ev_offset_14
+  type: offset
+  ts_start: 2025-01-01 13:00:00
+  duration: 40
+  target_kind: meter
+  target_id: meter_c10
+  magnitude: -1.3
+  mode: add
+- id: ev_leak_11
+  type: leak
+  ts_start: 2025-01-01 12:45:00
+  duration: 25
+  target_kind: edge
+  target_id: e_branch_w1_c13
+  magnitude: 2.5
+  mode: const
+- id: ev_offset_15
+  type: offset
+  ts_start: 2025-01-01 14:20:00
+  duration: 50
+  target_kind: meter
+  target_id: meter_c11
+  magnitude: 0.2
+  mode: mul
+- id: ev_offset_16
+  type: offset
+  ts_start: 2025-01-01 15:10:00
+  duration: 45
+  target_kind: meter
+  target_id: meter_c12
+  magnitude: -0.16
+  mode: mul
+- id: ev_leak_12
+  type: leak
+  ts_start: 2025-01-01 16:10:00
+  duration: 70
+  target_kind: edge
+  target_id: e_tie_ne
+  magnitude: 6.9
+  mode: const
+- id: ev_offset_17
+  type: offset
+  ts_start: 2025-01-01 17:15:00
+  duration: 50
+  target_kind: meter
+  target_id: meter_c15
+  magnitude: 1.8
+  mode: add
+- id: ev_offset_18
+  type: offset
+  ts_start: 2025-01-01 18:40:00
+  duration: 70
+  target_kind: meter
+  target_id: meter_c17
+  magnitude: -1.2
+  mode: drift
